# ddi.py

./: .gitignore  README.md  itest.py  pavement.py  pyproject.toml  requirements.txt  setup.py
ddi/: __init__.py  dataset.py  ddi.py  main.py  statareader.py
ddi/convert/: read_stata.py  read_tdp.py  stata_to_statistics.py  template_stats_md.md  write_stata.py  write_stats (copy).py  write_stats.py  write_tdp.py
ddi/onrails/repos/: convert_r2ddi.py  copy.py  dor1.py  extract_variables.py  merge_instruments.py  topics.py  topics2.py
ddi/statistics/: convert.py
ddi/tests/: test_values.py
docs/: .gitignore  Makefile  conf.py  index.rst  make.bat
docs/source/: conf.py  index.rst
docs/source/ddi/: dataset.rst  index.rst
docs/source/ddi/convert/: index.rst  parameter_write_stats.csv  read_stata.rst  read_tdp.rst  stata_to_statistics.rst  template_stats_html.rst  template_stats_md.rst  write_stata.rst  write_stats.rst  write_tdp.rst
docs/source/ddi/imports/: index.rst
docs/source/ddi/onrails/: index.rst
docs/source/exts/: hidden_code_block.py
test/: test_data.py  test_ddi.py  test_statareader.py  test_test.py
test/data/: ah-raw.dta  bh-raw.dta  ch-raw.dta
